more core data setup

--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -53,17 +53,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cIA-NR-8qn">
-                                <rect key="frame" x="16" y="209" width="343" height="30"/>
-                                <nil key="textColor"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="w9h-yy-OD9">
+                                <rect key="frame" x="162.5" y="146" width="50" height="50"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PVC-Qb-WzK">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Sly-ra-uQd">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="TmF-kd-WLW">
+                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ixa-OC-fOi">
+                                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                <subviews>
+                                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="owD-TB-q5A">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                    </stackView>
+                                                                </subviews>
+                                                            </stackView>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="TmF-kd-WLW" secondAttribute="trailing" id="cAk-Ob-eeO"/>
+                                                    <constraint firstItem="TmF-kd-WLW" firstAttribute="leading" secondItem="Sly-ra-uQd" secondAttribute="leading" id="uyP-HR-4PJ"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bMQ-qG-k7V">
+                                <rect key="frame" x="16" y="96" width="343" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="cIA-NR-8qn" firstAttribute="leading" secondItem="qhD-1J-9xv" secondAttribute="leading" constant="16" id="6UW-TH-5HA"/>
-                            <constraint firstItem="qhD-1J-9xv" firstAttribute="trailing" secondItem="cIA-NR-8qn" secondAttribute="trailing" constant="16" id="CdN-b1-zPP"/>
+                            <constraint firstItem="w9h-yy-OD9" firstAttribute="centerX" secondItem="lR4-rd-n2h" secondAttribute="centerX" id="2Ce-hP-9Wt"/>
+                            <constraint firstItem="bMQ-qG-k7V" firstAttribute="top" secondItem="qhD-1J-9xv" secondAttribute="top" constant="32" id="GXg-07-YgI"/>
+                            <constraint firstItem="bMQ-qG-k7V" firstAttribute="leading" secondItem="qhD-1J-9xv" secondAttribute="leading" constant="16" id="Khg-d2-6sv"/>
+                            <constraint firstItem="qhD-1J-9xv" firstAttribute="trailing" secondItem="bMQ-qG-k7V" secondAttribute="trailing" constant="16" id="qR9-oZ-4mB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qhD-1J-9xv"/>
                     </view>
@@ -80,7 +113,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="textField" destination="cIA-NR-8qn" id="AL0-lQ-62d"/>
+                        <outlet property="textField" destination="bMQ-qG-k7V" id="iSE-xc-ov9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xIs-E9-fJz" userLabel="First Responder" sceneMemberID="firstResponder"/>
